--- a/header-footer.css
+++ b/header-footer.css
@@ -78,4 +78,11 @@ nav a:hover i {
     justify-content: flex-start;
     margin-top: 1rem;
   }
+        .footer{
+  text-align: center;
+  padding: 20px;
+  width: 100%;
 }
+    .footer p {
+  margin: 0;
+  line-height: 1.6;}
